--- a/style.css
+++ b/style.css
@@ -9,6 +9,32 @@ body{
 
 .header {
     height: 100vh;
-    background: url('https://images.unsplash.com/photo-1551970634-086c4065fa85?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80') no-repeat ;
-    background-position: cover;
+    background: url('https://images.unsplash.com/photo-1558281079-3419472a1267?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80') no-repeat;
+    background-size: cover;
+    color: #fff;
+}
+
+.menu {
+    /* padding-top: 10px; */
+    height: 70px;
+
+}
+
+.logo {
+    color: #fff;
+    background: #212121;
+    border-radius: 50%;
+    padding: 8px;
+    margin-left: 10px;
+    font-weight: 800;
+}
+
+.nav-link {
+    color: #fff;
+}
+
+.top {
+    height: 100%;
+    border: 1px solid red;
+    margin: 140px auto;
 }
